--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
       - run: 
           name: Install and Configure Dependencies
           command: |
-            pip install --upgrade 
+            pip install --upgrade pip
             pip install -r requirements.txt
       - run: make html
       - deploy:
