--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
           command: |
             pip install --user --upgrade pip
             pip install -r requirements.txt
+            pelican --help
       - run: make html
       - deploy:
           name: Precheck Output 
